Some new helper and refactoring